fixed text-wrapping of h1

--- a/css/output.css
+++ b/css/output.css
@@ -50,14 +50,6 @@ label {
   line-height: 1.1;
 }
 
-/* Balance text wrapping on headings */
-h1,
-h2,
-h3,
-h4 {
-  text-wrap: balance;
-}
-
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
@@ -131,7 +123,6 @@ h1 {
   font-weight: 600;
   line-height: 1.2;
   margin-block: 1.5rem;
-  min-width: 100%;
 }
 
 quote {
@@ -164,7 +155,6 @@ main article.testimonial-one img {
 }
 main article.testimonial-one h1, main article.testimonial-one p {
   color: hsl(0, 0%, 100%);
-  max-width: 90ch;
 }
 main article.testimonial-two {
   background: hsl(217, 19%, 35%);
@@ -215,7 +205,7 @@ main article.testimonial-four h1, main article.testimonial-four p {
 }
 @media only screen and (min-width: 1025px) {
   main {
-    grid-template-columns: repeat(4, minmax(14rem, 19rem));
+    grid-template-columns: repeat(4, minmax(14rem, 17rem));
   }
 }
 
