--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,7 +16,6 @@ main{
     }
       &.testimonial-one{
         background: $violet-200;
-        // grid-column: 1 / span 2;
 
         img{
           border: 2px solid $violet-100
@@ -24,12 +23,10 @@ main{
 
         h1, p{
           color: text-clr($violet-200);
-          max-width: 90ch;
         }
       }
       &.testimonial-two {
         background: $grayish-blue-200;
-        // grid-column: 3;
 
         h1, p{
           color: text-clr($grayish-blue-200);
@@ -51,14 +48,8 @@ main{
           color: text-clr($white);
         }
       }
-      &.testimonial-three{
-        // grid-column: 1;
-        // grid-row: 2;
-      }
       &.testimonial-four {
         background: $blackish-blue;
-        // grid-column: 2 / span 2;
-        // grid-row: 2;
 
         img{
           border: 2px solid $violet-200;
@@ -67,10 +58,6 @@ main{
         h1, p{
           color: text-clr($blackish-blue);
         }
-      }
-      &.testimonial-five {
-        // grid-column: 4;
-        // grid-row: 1 / span 2;
       }
       @media only screen and (min-width: 1025px){
 
@@ -95,6 +82,6 @@ main{
       }
     }
   @media only screen and (min-width: 1025px) {
-    grid-template-columns: repeat(4, minmax(14rem, 19rem));
+    grid-template-columns: repeat(4, minmax(14rem, 17rem));
   }
 }
