--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -41,7 +41,6 @@ h1{
   font-weight: $fw-600;
   line-height: 1.2;
   margin-block: 1.5rem;
-  min-width: 100%;
 }
 
 quote{
